[package]
name = "lr2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
notify = { version = "6", default-features = false, features = [
    "macos_kqueue",
] }
notify-debouncer-full = "0.3"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
