[package]
name = "lrrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Break these apart later? Maybe!
[dependencies]
fastwebsockets = "0.7.0"
miette = { version = "7.1.0", features = ["fancy"] }
thiserror = "1.0.57"
tokio = { version = "1", features = ["full"] }
watchexec = "3.0.1"
watchexec-signals = "2.1.0"
